Bug resolved of the gap

--- a/src/components/publicEndpoint/publicEndpoint.scss
+++ b/src/components/publicEndpoint/publicEndpoint.scss
@@ -736,6 +736,24 @@ button.toggleButton {
   }
   .inner-editor {
     height: 100%;
+    
+    .editor-body-wrapper {
+      height: calc(100% - 6rem);
+
+      .ace-editor-wrapper {
+        height: 100%;
+        min-width: 0;
+        padding: 15px;
+
+        div#ace-editor {
+          min-height: 200px !important;
+          border-radius: 0px 0px 4px 4px ;
+          width: 100% !important;
+        }
+      }
+
+      padding: 0px;
+    }
   }
 }
 
